tests/reference/asr-test_annassign_02-accf6db.stderr
semantic error: The type 'Pattern' is undeclared.
 --> tests/errors/test_annassign_02.py:2:15
  |
2 |     hex_pat : Pattern[str] = r'-?0[xX]+'
  |               ^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
